# whatthegif

./: .gitignore  README.md  generate.cmd  generate.sh
.github/workflows/: backend.yml  build.yml
backend/: .gitignore  Cargo.toml  README.md  pom.xml
backend/src/: configuration.rs  data_converter.rs  data_store.rs  main.rs  pubsub.rs  router.rs  web_server.rs
backend/src/handler/: join.rs  mod.rs  room.rs
backend/src/main/java/com/github/chammmel/: AppLifecycleHandler.java  StartWebSocket.java
backend/src/main/java/com/github/chammmel/backend/: AppLifecycleHandler.java
backend/src/main/java/com/github/chammmel/backend/api/: StartWebSocket.java
backend/src/main/resources/: application.properties
configuration/: nginx.conf
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  hooks.ts
frontend/src/lib/: PopUp.svelte
frontend/src/lib/footer/: Footer.svelte
frontend/src/lib/game/: game.svelte  lobby.svelte
frontend/src/lib/header/: AnimatedLogo.svelte  Header.svelte  Logo.svelte
frontend/src/lib/input/: Button.svelte  GifButton.svelte  Input.svelte  JoinInput.svelte
frontend/src/lib/popup/: JoinPopUp.svelte  PopUp.svelte  PopUpHandler.svelte
frontend/src/lib/protocol/: communication.ts
frontend/src/lib/service/: data.service.ts  event-handler.service.ts
frontend/src/lib/stores/: backend.ts  popup.ts  room.ts  user.ts
frontend/src/routes/: __layout.svelte  about.svelte  create.svelte  index.svelte
frontend/src/routes/game/: [id].svelte
protocol/: communication.proto
