[package]
name = "whatthegif_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.8", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
redis = "0.21.4"
protobuf = "2.25.2"
tungstenite = "0.17"
tokio-tungstenite = "0.17"
random-string = "1.0"
