[package]
name = "whatthegif_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.8", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
redis = "0.21.4"
protobuf = "2.25.2"
random-string = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
warp = "0.3"
futures = { version = "0.3", default-features = false }
tokio-stream = "0.1.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
